@@ -25,6 +25,7 @@ Unreleased changes
   IMPROVEMENTS
    HBASE-559   MR example job to count table rows
    HBASE-578   Upgrade branch to 0.16.3 hadoop.
+   HBASE-596   DemoClient.py (Ivan Begtin via Stack)
 
 
 Release 0.1.1 - 04/11/2008
